unpackaged/main/default/objects/Blockers__c/Blockers__c.object-meta.xml
<CustomObject>
    <label>Blocker</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blockers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>