unpackaged/main/default/objects/Blockers__c/fields/Advice__c.field-meta.xml
<CustomField>
    <fullName>Advice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Advice</label>
    <referenceTo>Advice__c</referenceTo>
    <relationshipLabel>Blockers</relationshipLabel>
    <relationshipName>Blockers</relationshipName>
    <type>Lookup</type>
</CustomField>