unpackaged/main/default/objects/Blockers__c/fields/Days_Blocked__c.field-meta.xml
<CustomField>
    <fullName>Days_Blocked__c</fullName>
    <formula>IF( 
Date_Resolved__c = NULL, 
TODAY() - DATEVALUE(CreatedDate), 
Date_Resolved__c - DATEVALUE(CreatedDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Blocked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>