unpackaged/main/default/objects/Blockers__c/fields/Fulfilment__c.field-meta.xml
<CustomField>
    <fullName>Fulfilment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Fulfilment</label>
    <referenceTo>Fulfillment__c</referenceTo>
    <relationshipLabel>Blockers</relationshipLabel>
    <relationshipName>Blockers</relationshipName>
    <type>Lookup</type>
</CustomField>